--- a/src/MG/GestionBundle/Resources/views/projet/new.html.twig
+++ b/src/MG/GestionBundle/Resources/views/projet/new.html.twig
@@ -1,16 +1,29 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Projet creation</h1>
+    {% trans_default_domain 'FOSUserBundle' %}
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    {% include 'header.html.twig' %}
+    <section>
+        {% include 'aside.html.twig' %}
+        <div class="container">
+            <section class="contenue--client">
+                <article class="show--client">
+                    <h3 class="title--client">Projet creation</h3>
 
-    <ul>
-        <li>
-            <a href="{{ path('projet_index') }}">Back to the list</a>
-        </li>
-    </ul>
+                    {{ form_start(form, {'attr': {'class': 'form--client'}}) }}
+                    {{ form_widget(form, {'attr': {'class': 'champ--client'}}) }}
+                    <input class="btn__edit" type="submit" value="Ajouter" />
+                    {{ form_end(form) }}
+
+                    <ul>
+                        <li>
+                            <a class="btn_modification"href="{{ path('projet_index') }}">Retour aux clients</a>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+        </div>
+    </section>
+
 {% endblock %}
