--- a/web/bundles/css/styles.css
+++ b/web/bundles/css/styles.css
@@ -93,7 +93,9 @@ body {
   padding: 0 20px;
   line-height: 50px;
   text-decoration: none;
+  text-align: center;
   transition: ease-in-out 0.3s;
+  width: 150px;
 }
 
 .btn__supp:hover {
@@ -747,10 +749,13 @@ body {
 .contenue--client .show--client .form--client .champ--client label {
   color: white;
   padding-left: 5px;
+  position: absolute;
+  top: -20px;
 }
 
 .contenue--client .show--client .form--client .champ--client div {
   float: left;
+  position: relative;
 }
 
 .contenue--client .show--client .form--client .champ--client input[type=text] {
@@ -781,6 +786,16 @@ body {
   width: 90%;
 }
 
+.contenue--client .show--client .form--client .champ--client select {
+  background-color: transparent;
+  border: 1px solid #1072EA;
+  color: #1072EA;
+  height: 54px;
+  padding: 0 20px;
+  width: 150px;
+  margin-left: 5px;
+}
+
 .contenue--client .show--client .form--client:after {
   clear: both;
   display: table;
@@ -805,13 +820,28 @@ body {
   font-family: "brandon_grotesqueblack";
 }
 
+.contenue--client .show--projet .title--show--projet {
+  color: #f39468;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-family: "brandon_grotesqueblack";
+  margin: 0px 0 0px 0;
+}
+
+.contenue--client .show--projet .title--show--projet .material-icons {
+  font-size: 35px;
+  vertical-align: -10px;
+  margin-right: 10px;
+}
+
 .contenue--client .show--projet .title--projet {
   color: #f39468;
   letter-spacing: 10px;
   text-transform: uppercase;
   font-size: 18px;
   font-family: "brandon_grotesqueblack";
-  margin: 0px 0 50px 0;
+  margin: 0px 0 0px 0;
 }
 
 .contenue--client .show--projet .title--projet .material-icons {
@@ -829,9 +859,25 @@ body {
   vertical-align: -5px;
 }
 
+.contenue--client .show--projet .text--projet span {
+  color: #1072EA;
+  font-size: 16px;
+}
+
+.contenue--client .show--projet .text--title {
+  color: white;
+  font-family: "brandon_grotesqueblack";
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
 .contenue--client .show--projet tr td {
   padding-right: 200px;
   padding-bottom: 50px;
+}
+
+.contenue--client .show--projet .table_show_projet td {
+  padding-right: 50px;
 }
 
 .contenue--client .show--projet ul {
