--- a/web/bundles/css/styles.scss
+++ b/web/bundles/css/styles.scss
@@ -77,7 +77,9 @@ body{
   padding: 0 20px;
   line-height: 50px;
   text-decoration: none;
+  text-align: center;
   transition: ease-in-out 0.3s;
+  width: 150px;
   &:hover{
     background-color: transparent;
     border: 1px solid $third_color;
@@ -666,9 +668,12 @@ body{
         label{
           color: white;
           padding-left: 5px;
+          position: absolute;
+          top: -20px;
         }
         div{
           float: left;
+          position: relative;
         }
         input[type=text]{
           background: transparent;
@@ -696,6 +701,15 @@ body{
           padding-left: 15px;
           width: 90%;
         }
+        select{
+          background-color: transparent;
+          border: 1px solid $first_color;
+          color: $first_color;
+          height: 54px;
+          padding: 0 20px;
+          width: 150px;
+          margin-left: 5px;
+        }
       }
       &:after{
         clear: both;
@@ -719,13 +733,26 @@ body{
       font-size: 24px;
       font-family: $black;
     }
+    .title--show--projet{
+      color: $third_color;
+      letter-spacing: 10px;
+      text-transform: uppercase;
+      font-size: 18px;
+      font-family: $black;
+      margin: 0px 0 0px 0;
+      .material-icons{
+        font-size: 35px;
+        vertical-align: -10px;
+        margin-right: 10px;
+      }
+    }
     .title--projet{
       color: $third_color;
       letter-spacing: 10px;
       text-transform: uppercase;
       font-size: 18px;
       font-family: $black;
-      margin: 0px 0 50px 0;
+      margin: 0px 0 0px 0;
       .material-icons{
         font-size: 35px;
         vertical-align: -10px;
@@ -738,11 +765,26 @@ body{
       .material-icons{
         vertical-align: -5px;
       }
+      span{
+        color: $first_color;
+        font-size: 16px;
+      }
+    }
+    .text--title{
+      color: white;
+      font-family: $black;
+      font-size: 16px;
+      text-transform: uppercase;
     }
     tr{
       td{
         padding-right: 200px;
         padding-bottom: 50px;
+      }
+    }
+    .table_show_projet{
+      td{
+        padding-right: 50px;
       }
     }
     ul{
