--- a/web/bundles/css/styles.scss
+++ b/web/bundles/css/styles.scss
@@ -871,3 +871,25 @@ body{
     }
   }
 }
+.contenue--graphic{
+  margin-left: 2%;
+  .show--graphic{
+    background-color: rgba(black, 0.3);
+    box-shadow: 8px 3px 15px 0px rgba(black, 0.3);
+    margin-top: 50px;
+    margin-right: 50px;
+    padding: 20px 0 20px 20px;
+    width: 98%;
+    .title--graphic{
+      color: $third_color;
+      letter-spacing: 10px;
+      text-transform: uppercase;
+      font-size: 24px;
+      font-family: $black;
+      .material-icons{
+        font-size: 45px;
+        vertical-align: -7px;
+      }
+    }
+  }
+}
