--- a/app/Resources/views/aside.html.twig
+++ b/app/Resources/views/aside.html.twig
@@ -10,7 +10,7 @@
               <li><a {% if app.request.attributes.get('_route') == 'clients_index' %}class="active{% endif %}" href="{{path('clients_index')}}"><i class="material-icons">group</i>Clients</a></li>
               <li><a {% if app.request.attributes.get('_route') == 'projet_index' %}class="active{% endif %}" href="{{path('projet_index')}}"><i class="material-icons">folder</i>Projets</a></li>
               <li><a href="#!"><i class="material-icons">insert_drive_file</i>Factures et devis</a></li>
-              <li><a {% if app.request.attributes.get('_route') == 'graphic' %}class="active{% endif %} href="{{path('graphic')}}"><i class="material-icons">pie_chart</i>Graphique</a></li>
+              <li><a {% if app.request.attributes.get('_route') == 'graphic_index' %}class="active{% endif %} href="{{path('graphic_index')}}"><i class="material-icons">pie_chart</i>Graphique</a></li>
           </ul>
       </nav>
   </article>
