--- a/src/MG/GestionBundle/Resources/views/graphic/graphic.html.twig
+++ b/src/MG/GestionBundle/Resources/views/graphic/graphic.html.twig
@@ -8,7 +8,7 @@
         <div class="container">
             <section class="contenue--graphic">
                 <article class="show--graphic">
-                    <h3 class="title--graphic">Test graphique</h3>
+                    <h3 class="title--graphic">graphique des projets</h3>
 
                     <canvas id="myChart" width="400" height="400" data-url="{{ path('graphic_data') }}"></canvas>
 
