--- a/app/Resources/views/aside.html.twig
+++ b/app/Resources/views/aside.html.twig
@@ -1,11 +1,11 @@
 <aside class="aside-left">
   <div class="header-aside">
-      <h1 class="title"><img src="{{asset('bundles/images/logo.png')}}" alt="image_logo" class="logo"><a href="{{ path('fos_user_profile_show') }}">Workplace</a></h1>
+      <h1 class="title"><img src="{{asset('bundles/images/logo.png')}}" alt="image_logo" class="logo"><a href="{{ path('dashboard_index') }}">Workplace</a></h1>
   </div>
   <article class="sidebar">
       <nav class="menu_aside">
           <ul class="menu--aside">
-              <li><a {% if app.request.attributes.get('_route') == 'dashboard' %}class="active{% endif %} href="{{path('dashboard')}}"><i class="material-icons">dashboard</i>Dashboard</a></li>
+              <li><a {% if app.request.attributes.get('_route') == 'dashboard_index' %}class="active{% endif %} href="{{path('dashboard_index')}}"><i class="material-icons">dashboard</i>Dashboard</a></li>
               <li><a {% if app.request.attributes.get('_route') == 'fos_user_profile_show' %}class="active{% endif %}" href="{{path('fos_user_profile_show')}}"><i class="material-icons">face</i>Profil</a></li>
               <li><a {% if app.request.attributes.get('_route') == 'clients_index' %}class="active{% endif %}" href="{{path('clients_index')}}"><i class="material-icons">group</i>Clients</a></li>
               <li><a {% if app.request.attributes.get('_route') == 'projet_index' %}class="active{% endif %}" href="{{path('projet_index')}}"><i class="material-icons">folder</i>Projets</a></li>
